fix(homepage): update spacing

--- a/src/components/ClickableTile/clickable-tile.scss
+++ b/src/components/ClickableTile/clickable-tile.scss
@@ -7,6 +7,7 @@ a.tile--article {
   flex-direction: column;
   padding: 0;
   background: $ibm-colors__white;
+  margin: 1rem;
 
   &:hover {
     background: $ibm-colors__gray-20;
@@ -14,16 +15,30 @@ a.tile--article {
 
   // full bleed for tiles on mobile
   @include breakpoint('sm') {
-    width: 100%;
+    width: calc(100% - 2rem);
   }
 
   @include breakpoint('md') {
-    width: 50%;
-    margin: 0;
+    width: calc(50% - .5rem);
+    margin-left: 0;
+    margin-bottom: 0;
+
+    &:nth-child(even) {
+      margin-right: 0;
+    }
   }
 
   @include breakpoint('lg') {
-    width: 33%;
+    width: calc(33% - .51rem);
+    margin-right: 1rem;
+
+    &:nth-child(even) {
+      margin-right: 1rem;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
@@ -42,15 +57,25 @@ a.tile--article.tile--dark:hover {
   border-bottom: none;
 }
 
+.tile__img span {
+  height: 100%;
+}
+
 .tile--article .tile__img img {
   width: 100%;
+  object-fit: cover;
+}
+
+.tile__info,
+.tile__img {
+  flex: 50%;
 }
 
 .tile--article .tile__info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: $spacing-md $spacing-md 5.5rem;
+  padding: $spacing-md;
 
   @include breakpoint('md') {
     padding-right: 25%;
@@ -243,7 +268,7 @@ p.tile__author {
 
     @include breakpoint('md') {
       border-bottom: none;
-      border-right: 1px solid $ibm-colors__gray-20;
+      border-right: none;
 
       // selects every 3rd item and removes right border
       &:nth-child(2n + 2) {
@@ -257,10 +282,10 @@ p.tile__author {
 
     @include breakpoint('lg') {
       border-bottom: none;
-      border-right: 1px solid $ibm-colors__gray-20;
+      border-right: none;
 
       &:nth-child(2n + 2) {
-        border-right: 1px solid $ibm-colors__gray-20;
+        border-right: none;
       }
 
       // selects every 3rd item and removes right border
